src/test/deca/codegen/valid/simple_if.deca
// @result Test reussi
/*
    Description : test sur un conditionnelle if simple

    Résultat : à définir...
*/
{
    boolean x = true;
    if (x){
        println("Test reussi");
    }
}
