src/test/deca/codegen/invalid/non_object_overflow_div_0_dot_0.deca
// @result Error: Overflow during arithmetic operation
/*
    Description : Test sur la gestion de la division par 0.0 (float)

    Résultat : à définir...

*/
{
    println(1/0.0);
    println("Test échoué : voir p96 paragraphe 5 phrase 1 et 5");
}
